@@ -44,8 +44,8 @@ lines.linewidth   : 1.0     # line width in points
 lines.linestyle   : -       # solid line
 lines.color       : blue
 lines.marker      : None    # the default marker
-lines.markerfacecolor  : auto    # either a color name or 'auto'
-lines.markeredgecolor  : auto    # either a color name or 'auto'
+# lines.markerfacecolor  : auto    # either a color name or 'auto'
+# lines.markeredgecolor  : auto    # either a color name or 'auto'
 lines.markeredgewidth  : 0.5     # the line width around the marker symbol
 lines.markersize  : 6            # markersize, in points
 lines.dash_joinstyle : miter        # miter|round|bevel
